# DebugGUI

./: CMakeLists.txt  README.md  three.html
.github/workflows/: ci.yml
DebugGUI/: CMakeLists.txt
DebugGUI/src/: DebugGUI.cxx  DebugGUI.h  DebugGUIHeadless.cxx  DebugGUIMacos.mm  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h
DebugGUI/src/GL/: gl3w.h
DebugGUI/test/: test_DebugGUIGL.cxx  test_DebugGUIMetal.cxx  test_DebugGUISokol.cxx  test_ImGUI.cpp  test_ImGUIHeadless.cpp
cmake/: DebugGUIConfig.cmake.in
remote/: remote.html
tracy/imgui/: imgui.h
tracy/profiler/src/: main.cpp
tracy/server/: TracyImGui.hpp  TracySourceView.cpp  TracyView.cpp
